fixed dark mode light mode css text stlying and made it automatic to match OS state

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,8 @@ h3, h4 {
   font-family: "Fira Mono", monospace;
   font-weight: 400;
   font-size: 1.0rem;
-	color: rgba(0,0,0,0.7);
+	/* color: rgba(0,0,0,0.7); */
+  color: var(--text);
 }
 
 .page {
@@ -56,7 +57,11 @@ padding-left: 250px;
 
 body {
   --bg: #fffff7;
-  --text: rgba(0,0,0,0.84);
+  --text-rgb: 0, 0, 0;
+  --text: rgba(var(--text-rgb), 0.84);
+ --text-muted: rgba(var(--text-rgb), 0.6);
+  --text-subtle: rgba(var(--text-rgb), 0.45);
+  --text-faint: rgba(var(--text-rgb), 0.3);
   --border: #111;
   --link: #0044cc;
   --link-hover: #000000;
@@ -81,7 +86,9 @@ body.dark {
   /* --border: #111; */
   /* --link: #0044cc; */
   /* --link-hover: #000000; */
-  --text: #f2f2f2;
+  /* --text: #f2f2f2; */
+	--text-rgb: 242, 242, 242;
+  --text: rgba(var(--text-rgb), 1);
   /* --border: #f2f2f2; */
 
  --link: #7db7ff;
@@ -157,7 +164,7 @@ body.dark {
 }
 
 .university {
-	color: rgba(0,0,0,0.6);
+	color: var(--text-muted);
 	margin-bottom: 1.5rem;
 }
 
